troubleshooting layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -534,6 +534,7 @@ a {
 
 .block {
   width: 100%;
+  overflow-x: hidden;
 }
 .block {
   --padding-vertical: 6rem;
